# digital_calendar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  README.md  SETUP_COMPLETE.md  check_files.sh  chore_chart.csv  docker-compose.yml  pi_install_script.sh  pyproject.toml  requirements.txt  setup_project.sh  startup.sh  task_chart.csv  temp.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  __init__.py  app.py  docker_commands.txt  requirements-dev.txt  requirements.txt
backend/api/: __init__.py  routes.py  schemas.py
backend/api/v1/: __init__.py  routes.py
backend/calendar_sources/: __init__.py  apple_cal.py  base.py  google_cal.py
backend/chore_chart/: base.py
backend/config/: __init__.py  logger.py  settings.py  structured_logging.py
backend/sync/: cache_manager.py  chore_manager.py  migrations.py  sync_engine.py  task_manager.py
backend/task_chart/: base.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_utils.py
backend/utils/: __init__.py  helpers.py  security.py
claude_notes/: IMPROVEMENTS_SUMMARY.md  LOWER_PRIORITY_IMPROVEMENTS.md  STYLING_IMPROVEMENTS.md
client/: __init__.py  display_app.py
client/config/: __init__.py  settings.py
client/ui/: __init__.py  calendar_view.py  theme.py  touch_handler.py
client/utils/: __init__.py  api_client.py
frontend/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  setupProxy.js  styles.css
frontend/src/components/: DarkModeToggle.tsx  EventCard.tsx  Header.tsx  Toast.tsx
frontend/src/components/calendar/: CalendarHeader.tsx  CalendarNav.tsx  CalendarView.module.css  CalendarView.tsx  DayView.tsx  EventCard.tsx  EventItem-optimized.tsx  EventItem.module.css  EventItem.tsx  EventList.tsx  MonthView.tsx  NoEventsMessage.tsx  WeekView.tsx
frontend/src/components/global/: Button.module.css  Card.module.css  EmptyState.module.css  EmptyState.tsx  ErrorBoundary.tsx  FloatingLabelInput.module.css  FloatingLabelInput.tsx  Header.tsx  PageTransition.tsx  ProgressBar.tsx  SkeletonLoader.module.css  SkeletonLoader.tsx
frontend/src/constants/: days.ts  memberColors.ts
frontend/src/hooks/: useApi.ts  useDebounce.ts  useNavigation.ts  useOptimizedCallback.ts  useSwipeNavigation.tsx  useWindowSize.ts
frontend/src/pages/: AccountSetup.tsx  AppleSetup.tsx  CalendarDisplay.tsx  ChoreChartDisplay.tsx  Dashboard.tsx  GoogleSetup.tsx  TaskChartDisplay.tsx
frontend/src/routes/: index.tsx
frontend/src/styles/: variables.css
frontend/src/types/: account.ts  accounts.ts  api.ts  cacheStats.ts  calendarEvent.ts  index.ts  syncStatus.ts  tasks.ts
frontend/src/utils/: api.ts  toast.tsx
server/: app.py
server/api/: routes.py
server/calendar_sources/: apple_cal.py  base.py  google_cal.py
server/config/: config_schema.py  constants.py  settings.py
server/static/: styles.css
server/sync/: __init__.py  cache_manager.py  migrations.py  sync_engine.py
server/templates/: apple_auth.html  apple_setup.html  display.html  display.html.old  error.html  google_setup.html  index.html  setup.html
server/utils/: auth.py  helpers.py
setup/: requirements.txt
(+15 files in other folders)
